<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomNavView"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:gravity="center_vertical"
    android:background="@drawable/bottom_nav_background"
    android:paddingStart="@dimen/bottom_nav_bar_padding"
    android:paddingEnd="@dimen/bottom_nav_bar_padding">


    <ImageView
        android:id="@+id/explorerIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/explorer_bottom_nav_icon"
        android:contentDescription="@string/explorer"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="7dp"/>

    <TextView
        android:id="@+id/explorerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explorer"
        android:textColor="@color/white"
        android:textFontWeight="700"
        android:layout_marginEnd="20dp"
        tools:targetApi="p" />

    <ImageView
        android:id="@+id/cartIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/icon_buttons_padding"
        app:srcCompat="@drawable/cart_bottom_nav_icon"
        android:contentDescription="@string/cart"
        android:layout_marginStart="@dimen/bottom_nav_bar_padding"
        android:layout_marginEnd="@dimen/bottom_nav_bar_padding"/>

    <ImageView
        android:id="@+id/favoritesIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/icon_buttons_padding"
        app:srcCompat="@drawable/favorites_bottom_nav_icon"
        android:contentDescription="@string/favorites"
        android:layout_marginStart="@dimen/bottom_nav_bar_padding"
        android:layout_marginEnd="@dimen/bottom_nav_bar_padding" />

    <ImageView
        android:id="@+id/profileIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/icon_buttons_padding"
        app:srcCompat="@drawable/profile_bottom_nav_icon"
        android:contentDescription="@string/profile"
        android:layout_marginStart="@dimen/bottom_nav_bar_padding"
        android:layout_marginEnd="@dimen/bottom_nav_bar_padding" />
</LinearLayout>