<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:elevation="8dp"
        android:paddingStart="25dp"
        android:background="@drawable/hot_sales_item_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/newBadge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/new_badge_background"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sf_pro_display"
                android:text="@string/new_badge"
                android:textColor="@color/white"
                android:textFontWeight="700"
                android:textSize="10sp"
                tools:ignore="SmallSp,TextContrastCheck"
                tools:targetApi="p" />

        </FrameLayout>

        <TextView
            android:id="@+id/hotSaleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/some_phone"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textFontWeight="700"
            android:fontFamily="@font/sf_pro_display"
            tools:targetApi="p" />

        <TextView
            android:id="@+id/hotSaleDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/some_description"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:textFontWeight="700"
            android:fontFamily="@font/sf_pro_display"
            tools:targetApi="p" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/hotSaleBuyButton"
            android:layout_width="98dp"
            android:layout_height="23dp"
            android:layout_marginTop="26dp"
            android:gravity="center"
            android:background="@drawable/button_bg"
            android:text="@string/buy_now"
            android:textFontWeight="700"
            android:fontFamily="@font/sf_pro_display"
            android:textColor="@color/purple"
            android:textSize="11sp"
            tools:targetApi="p" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/hot_sales_image_corner_radius"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/hotSaleBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image"
            app:srcCompat="@drawable/placeholder" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>